aligned meme text correctly

--- a/MG.css
+++ b/MG.css
@@ -23,14 +23,13 @@ input {
 
 
 img {
-	max-width: 400px;
-	max-height: 450px;
+	height: 400px;
 	align-items: center;
   }
 
   .meme-text {
 	font-family: Impact, sans-serif;
-	font-size: 36px;
+	font-size: 30px;
 	text-transform: uppercase;
 	color: white;
 	text-shadow: 2px 2px 4px black;
@@ -44,23 +43,25 @@ img {
   
   
   .topText {
-	top: 5%;
+	top: 2%;
 	width: 100%;
   }
   
   .bottomText {
-	top: 85%;
+	bottom: 5%;
 	width: 100%;
   }
 
   .meme {
 	position: relative;
+	display: inline-block;
+	margin: 10px;
   }
   
   .delete-button {
 	position: absolute;
-	top: 10px;
-	right: 10px;
+	top: 0;
+	right: 0;
 	padding: 5px;
 	background-color: red;
 	color: white;
